--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,31 @@
 body {
 	background-color: #FFD273;
 	color: #6D89D5;
+	font-family: Arial, cursive;
 	text-align: center;
+}
+
+.buttons {
+	margin: 100px;
+	color: #200772;
+	font-size: 30px;
+}
+
+.pseudoInput {
+	background-color: white;
+	padding: 15px;
+	border-radius: 10px;
+}
+
+input {
+	text-align: center;
+	font-size: 20px;
+	height: 40px;
+	border-radius: 10px;
+}
+
+input[type="submit"] {
+	padding-right: 10px;
+	padding-left: 10px;
+	margin: 10px;
 }
