--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,12 @@ body {
 	border-radius: 10px;
 }
 
+.radioList {
+	margin-left: 40%;
+	margin-right: 30%;
+	text-align: left;
+}
+
 input {
 	text-align: center;
 	font-size: 20px;
@@ -28,4 +34,8 @@ input[type="submit"] {
 	padding-right: 10px;
 	padding-left: 10px;
 	margin: 10px;
+}
+
+ul {
+	list-style-type: none;
 }
