--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ body {
 	text-align: left;
 }
 
+.error {
+	color: red;
+}
+
 input {
 	text-align: center;
 	font-size: 20px;
@@ -31,8 +35,9 @@ input {
 }
 
 input[type="submit"] {
-	padding-right: 10px;
-	padding-left: 10px;
+	font-size: 25px;
+	padding-right: 12px;
+	padding-left: 12px;
 	margin: 10px;
 }
 
