--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,15 @@ body {
 	text-align: center;
 }
 
-.buttons {
-	margin: 100px;
-	color: #200772;
-	font-size: 30px;
-}
-
 .pseudoInput {
+	font-size: 30px;
+	color: black;
 	background-color: white;
 	padding: 15px;
 	border-radius: 10px;
 }
 
-.radioList {
+.mainField {
 	margin-left: 40%;
 	margin-right: 30%;
 	text-align: left;
@@ -25,6 +21,7 @@ body {
 
 .error {
 	color: red;
+	font-size: 30px;
 }
 
 input {
