--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,18 @@ body {
 	font-size: 30px;
 }
 
+.log {
+	margin-left: 30%;
+	margin-right: 30%;
+	font-size: 30px;
+}
+
+.log li {
+	background-color: white;
+	border-radius: 10px;
+	padding: 5px;
+}
+
 input {
 	text-align: center;
 	font-size: 20px;
